[gd_scene load_steps=43 format=3 uid="uid://lp5wg45x1d77"]

[ext_resource type="Script" path="res://script/skeleton.gd" id="1_1e2o3"]
[ext_resource type="Texture2D" uid="uid://ddrbrej8qab43" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Idle.png" id="2_aaysq"]
[ext_resource type="Texture2D" uid="uid://bnnm7ni5qmvuw" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Walk.png" id="3_b582s"]
[ext_resource type="Texture2D" uid="uid://bg16quqnbmqq5" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Attack1.png" id="4_cu22p"]
[ext_resource type="Texture2D" uid="uid://dtmqxma54y5j7" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Attack2.png" id="5_u388h"]
[ext_resource type="Texture2D" uid="uid://co1jl7ljb1u8i" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Hurt.png" id="6_rfwkj"]
[ext_resource type="Texture2D" uid="uid://blwao1pjj12e2" path="res://assets/Skeleton_Sword/Skeleton_White/Skeleton_01_White_Die.png" id="7_erx0y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1e1xn"]
size = Vector2(28, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q311p"]
size = Vector2(58, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4x6uq"]
size = Vector2(34, 52)

[sub_resource type="Animation" id="Animation_55c5e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_u388h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1u5p6"]
resource_name = "attack1"
length = 0.833342
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_cu22p"), ExtResource("4_cu22p")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.416667, 0.583333, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}

[sub_resource type="Animation" id="Animation_h6uik"]
resource_name = "attack2"
length = 0.750008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_u388h"), ExtResource("5_u388h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}

[sub_resource type="Animation" id="Animation_w7wk7"]
resource_name = "die"
length = 1.08334
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.08333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_erx0y"), ExtResource("7_erx0y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.08333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.08333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.08333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_5oe8d"]
resource_name = "hurt"
length = 0.416675
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("6_rfwkj"), ExtResource("6_rfwkj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_xkt6m"]
resource_name = "idle"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_aaysq"), ExtResource("2_aaysq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_gj7cw"]
resource_name = "walk"
length = 0.833342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_b582s"), ExtResource("3_b582s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordArea/SwordCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xhdd"]
_data = {
"RESET": SubResource("Animation_55c5e"),
"attack1": SubResource("Animation_1u5p6"),
"attack2": SubResource("Animation_h6uik"),
"die": SubResource("Animation_w7wk7"),
"hurt": SubResource("Animation_5oe8d"),
"idle": SubResource("Animation_xkt6m"),
"walk": SubResource("Animation_gj7cw")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hs66w"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lvlt4"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ta5ek"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tfq1w"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i0iy7"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f5mxg"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ti3s"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vuycw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hr2w0"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3e4jg"]
advance_mode = 2
advance_condition = &"attack1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_non6i"]
advance_mode = 2
advance_condition = &"attack2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_betxc"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jaj3w"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_csr76"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sc7sy"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2oku5"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wn0g4"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4mxpk"]
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8a33v"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yl56i"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_abfkg"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bkita"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ayi8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lfjq2"]
states/End/position = Vector2(916, 100)
states/attack1/node = SubResource("AnimationNodeAnimation_hs66w")
states/attack1/position = Vector2(553, 6)
states/attack2/node = SubResource("AnimationNodeAnimation_lvlt4")
states/attack2/position = Vector2(407, 191)
states/die/node = SubResource("AnimationNodeAnimation_ta5ek")
states/die/position = Vector2(802, 100)
states/hurt/node = SubResource("AnimationNodeAnimation_tfq1w")
states/hurt/position = Vector2(679, 191)
states/idle/node = SubResource("AnimationNodeAnimation_i0iy7")
states/idle/position = Vector2(305, 100)
states/walk/node = SubResource("AnimationNodeAnimation_f5mxg")
states/walk/position = Vector2(407, 6)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_4ti3s"), "die", "End", SubResource("AnimationNodeStateMachineTransition_vuycw"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_hr2w0"), "walk", "attack1", SubResource("AnimationNodeStateMachineTransition_3e4jg"), "walk", "attack2", SubResource("AnimationNodeStateMachineTransition_non6i"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_betxc"), "attack1", "walk", SubResource("AnimationNodeStateMachineTransition_jaj3w"), "attack2", "walk", SubResource("AnimationNodeStateMachineTransition_csr76"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_sc7sy"), "walk", "hurt", SubResource("AnimationNodeStateMachineTransition_2oku5"), "attack1", "hurt", SubResource("AnimationNodeStateMachineTransition_wn0g4"), "attack2", "hurt", SubResource("AnimationNodeStateMachineTransition_4mxpk"), "attack1", "die", SubResource("AnimationNodeStateMachineTransition_8a33v"), "walk", "die", SubResource("AnimationNodeStateMachineTransition_yl56i"), "idle", "die", SubResource("AnimationNodeStateMachineTransition_abfkg"), "attack2", "die", SubResource("AnimationNodeStateMachineTransition_bkita"), "hurt", "walk", SubResource("AnimationNodeStateMachineTransition_3ayi8")]
graph_offset = Vector2(-96, -48)

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_1e2o3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_u388h")
hframes = 9
frame = 6

[node name="SkeletonCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_1e1xn")

[node name="SwordArea" type="Area2D" parent="." groups=["enemy_attack"]]

[node name="SwordCollision" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(19, 0)
shape = SubResource("RectangleShape2D_q311p")

[node name="HitboxArea" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_4x6uq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5xhdd")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_lfjq2")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack1 = false
parameters/conditions/attack2 = false
parameters/conditions/die = false
parameters/conditions/hurt = false
parameters/conditions/idle = false
parameters/conditions/walk = false

[connection signal="area_entered" from="SwordArea" to="." method="_on_sword_area_area_entered"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
